--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ colorama==0.4.4
 cycler==0.11.0
 dash==2.0.0
 dash-bootstrap-components==1.0.0
+dash-bootstrap-templates==1.0.4
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
