--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ entrypoints==0.3
 filelock==3.0.12
 Flask==2.0.2
 Flask-Compress==1.10.1
+gunicorn==20.1.0
 idna==3.3
 ipykernel==6.5.0
 ipython==7.29.0
