--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ pandas==1.3.4
 pandocfilters==1.5.0
 parso==0.8.2
 pickleshare==0.7.5
-Pillow==8.4.0
+Pillow>=9.0.0
 plotly==5.3.1
 ply==3.11
 prometheus-client==0.12.0
